# app

./: .gitignore  .gitmodules  README.md  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  main_fastapi.py  pyproject.toml
backend/src/: agent.py  bria.py  image_utils.py  logger.py  segmentor.py  utils.py
backend/src/tools/: generate_image.py
