[project]
name = "fibo-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi >=0.123.9",
    "langchain >=1.1.2",
    "langchain-openai >=1.1.0", 
    "uvicorn >=0.38.0",
    "langgraph-checkpoint-sqlite >=3.0.0",
    "python-dotenv >=1.2.1",
    "debugpy >=1.8.17",
    "pillow >=12.0.0",
    "huggingface-hub >=1.2.1",
    "python-multipart >=0.0.20",
    "transformers >=4.57.3"
]
